--- a/src/layouts/components/Header/Header.module.scss
+++ b/src/layouts/components/Header/Header.module.scss
@@ -13,6 +13,11 @@
     z-index: 99;
 }
 
+.active {
+    color: $blue;
+    border-bottom: 2px solid $blue;
+}
+
 .header-container {
     @include flex(space-between, center, unset, unset);
     @include tablet {
@@ -31,10 +36,10 @@
         }
 
         .menu-item {
-            padding: 16px 18px;
+            padding: 12px 16px;
 
             &:hover {
-                opacity: 0.6;
+                color: $blue;
             }
         }
     }
@@ -72,6 +77,10 @@
             display: flex;
             font-size: 2.6rem;
             position: relative;
+
+            &:hover {
+                color: $blue;
+            }
 
             .count-cart {
                 @include flex(center, center, unset, unset);
