--- a/src/layouts/components/Search/Search.module.scss
+++ b/src/layouts/components/Search/Search.module.scss
@@ -19,8 +19,8 @@
         width: 100%;
         padding: 12px 36px 12px 16px;
         font-size: 1.4rem;
-        border: 1px solid #ccc;
-        border-radius: 30px;
+        // border: 1px solid #ccc;
+        // border-radius: 30px;
 
         &:focus {
             border-color: $black;
